# satellite-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  led.py  main.py  pyproject.toml  servo.py  tracker.py
.github/workflows/: pre-commit.yml  pytest.yml
pointing/: Dockerfile  README.md  pyproject.toml
pointing/pointing/: main.py  pointer.py
pointing/tests/: test_pointer.py
tracking/: README.md  pyproject.toml
tracking/tests/: test_led.py
tracking/tracking/: __init__.py  led.py  servo.py  stepper.py
