[build-system] # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry] # https://python-poetry.org/docs/pyproject/
name = "satellite-tracker"
version = "0.1.0"
description = "Electronics project for pointing to any satellite or planet, whether it is visible or below the horizon"
authors = []
readme = "README.md"
packages = [
    {include = "pointing", from = "pointing"},
    {include = "tracking", from = "tracking"},
]

[tool.poetry.dependencies]
python = "^3.10"
pointing = { path = "pointing", develop = true }
tracking = { path = "tracking", develop = true }
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
ruff = "^0.0.265"
black = "^23.3.0"
pre-commit = "^3.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.ruff] # https://github.com/charliermarsh/ruff
fix = true
show-fixes = true
ignore-init-module-imports = true
select = ["A", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "PGH001", "RET504", "S101", "S113", "D100", "D101", "D102", "D103", "D104", "D107", "PLR0913", "PLR2004", "G003", "G004", "DTZ006", "ISC003", "F401", "PTH123", "SIM108"]
pydocstyle = {convention = "google"}
mccabe = {max-complexity = 14}


[tool.poe.tasks] # https://github.com/nat-n/poethepoet
build-pointer = {shell = "docker build --tag pointer --target runtime pointing", help = "Build the pointer docker image."}
deploy-pointer = {shell = "docker run --rm --name pointer pointer", help = "Deploy the pointer docker image."}
run-pointer = {script = "pointing.main:point", help = "Run the pointer locally. [WORK IN PROGRESS]"}

[tool.poe.tasks.run]
help = "Run the main program."
script = "main:main"

[tool.poe.tasks.test]
help = "Run the tests for all modules."
sequence = [
    "pytest pointing",
    "pytest tracking",
]
default_item_type = "shell"
