[tool.poetry]
name = "pointing"
version = "0.1.0"
description = "Application for computing the pointing angles to a satellite."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.2.2"
pydantic = "^1.10.7"
requests = "^2.30.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
