[build-system] # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry] # https://python-poetry.org/docs/pyproject/
name = "pointing"
version = "0.1.0"
description = "Application for computing the pointing angles to a satellite."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.2.2"
pydantic = "^1.10.7"
requests = "^2.30.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --failed-first --strict-config --strict-markers --cov-report term-missing --cov pointing --verbosity=2"
xfail_strict = false
