[tool.poetry]
name = "tracking"
version = "0.1.0"
description = "Application to make a mechanical arm point in a given direction."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
